fixed filter buttons overlapping

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -114,15 +114,17 @@ h1 {
 
 .filter-tags{
     display: flex;
-    justify-content: space-evenly;
+    justify-content: left ;
     flex-wrap: wrap;
+    gap: 15px;
 
 }
 
 .filter-button{
     display: flex;
+    padding: 3px 0;
     align-items: center;
-    justify-content: space-around;
+    justify-content: center;
     border-radius: 1rem;
     background-color: var(--brandGold);
     transition: 0.33s;
@@ -145,6 +147,7 @@ h1 {
 }
 
 .filter-chevron {
+    margin-left: 5px;
     height: 15px;
     transform: rotate(90deg);
 }
